--- a/.github/workflows/ci-make.yml
+++ b/.github/workflows/ci-make.yml
@@ -72,7 +72,7 @@ jobs:
 
     - name: Test Python command line script
       run: |
-        python run_main.py -R 1233 -p 6 --doEvol --folderName exampleRun2  # Note: small population of 6 for quick runtime
+        python run_main.py -R 1233 -p 6 --doEvol --outputFolderName exampleRun2  # Note: small population of 6 for quick runtime
 
     - name: Test using test_all.sh
       run: |
