--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 /report.txt
 /exampleRun_nml
 /*.dat
+/exampleRun2
+/neuromlLocal/testc302SigSim/*.dat
+/neuromlLocal/testc302SigSim/arm64
+/neuromlLocal/testc302SigSim/x86_64
+/neuromlLocal/testc302SigSim/report.txt
+/neuromlLocal/testc302SigSim/testc302NervousSystem
