refactored main.cpp

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /neuromlLocal/testc302SigSim/x86_64
 /neuromlLocal/testc302SigSim/report.txt
 /neuromlLocal/testc302SigSim/testc302NervousSystem
+/RoyalSociety2018/*.dat
+/RoyalSociety2018/main
