added CE test script

--- a/Worm2D/Makefile
+++ b/Worm2D/Makefile
@@ -1,5 +1,5 @@
-main: main.o WormRS18.o Worm2D.o WormBody.o Evolution.o EvolutionRS18.o NervousSystem.o StretchReceptor18.o Muscles.o TSearch.o random.o argUtils.o jsonUtils.o
-	g++ -pthread -o main main.o WormRS18.o Evolution.o EvolutionRS18.o Worm2D.o WormBody.o argUtils.o NervousSystem.o StretchReceptor18.o Muscles.o jsonUtils.o TSearch.o random.o 
+main: main.o WormRS18.o WormCE.o Worm2D.o WormBody.o Evolution.o EvolutionCE.o EvolutionRS18.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o TSearch.o random.o argUtils.o jsonUtils.o
+	g++ -pthread -o main main.o WormRS18.o WormCE.o Evolution.o EvolutionCE.o EvolutionRS18.o Worm2D.o WormBody.o argUtils.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o jsonUtils.o TSearch.o random.o 
 random.o: random.cpp random.h #VectorMatrix.h
 	g++ -c -O3 -flto random.cpp
 jsonUtils.o: jsonUtils.cpp jsonUtils.h
@@ -12,16 +12,22 @@ Worm2D.o: Worm2D.cpp Worm2D.h
 	g++ -c -O3 -std=c++11 -flto Worm2D.cpp
 EvolutionRS18.o: EvolutionRS18.cpp EvolutionRS18.h
 	g++ -c -O3 -std=c++11 -flto EvolutionRS18.cpp
+EvolutionCE.o: EvolutionCE.cpp EvolutionCE.h
+	g++ -c -O3 -std=c++11 -flto EvolutionCE.cpp
 Evolution.o: Evolution.cpp Evolution.h
 	g++ -c -O3 -std=c++11 -flto Evolution.cpp
 WormRS18.o: WormRS18.cpp WormRS18.h
 	g++ -c -O3 -std=c++11 -flto WormRS18.cpp
+WormCE.o: WormCE.cpp WormCE.h
+	g++ -c -O3 -std=c++11 -flto WormCE.cpp
 WormBody.o: WormBody.cpp WormBody.h
 	g++ -c -O3 -flto WormBody.cpp
 NervousSystem.o: NervousSystem.cpp NervousSystem.h #VectorMatrix.h random.h ../neuromlLocal/NervousSystemBase.h
 	g++ -c -O3 -flto NervousSystem.cpp
 StretchReceptor18.o: StretchReceptor18.cpp StretchReceptor18.h
 	g++ -c -O3 -flto StretchReceptor18.cpp
+StretchReceptorCE.o: StretchReceptorCE.cpp StretchReceptorCE.h
+	g++ -c -O3 -flto StretchReceptorCE.cpp	
 Muscles.o: Muscles.cpp Muscles.h #VectorMatrix.h random.h
 	g++ -c -O3 -flto Muscles.cpp
 main.o: main.cpp #WormRS18.h Worm2D.h WormBody.h StretchReceptor18.h Muscles.h TSearch.h
