--- a/Worm2D/Makefile
+++ b/Worm2D/Makefile
@@ -1,5 +1,5 @@
-main: main.o WormRS18.o WormCE.o Worm2D.o WormBody.o Evolution.o EvolutionCE.o EvolutionRS18.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o TSearch.o random.o argUtils.o jsonUtils.o
-	g++ -pthread -o main main.o WormRS18.o WormCE.o Evolution.o EvolutionCE.o EvolutionRS18.o Worm2D.o WormBody.o argUtils.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o jsonUtils.o TSearch.o random.o 
+main: main.o WormRS18.o Worm21.o WormCE.o Segment21.o Worm2D.o WormBody.o Evolution21.o Evolution.o EvolutionCE.o EvolutionRS18.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o TSearch.o random.o argUtils.o jsonUtils.o
+	g++ -pthread -o main main.o WormRS18.o Worm21.o WormCE.o Segment21.o Evolution21.o Evolution.o EvolutionCE.o EvolutionRS18.o Worm2D.o WormBody.o argUtils.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o jsonUtils.o TSearch.o random.o 
 random.o: random.cpp random.h #VectorMatrix.h
 	g++ -c -O3 -flto random.cpp
 jsonUtils.o: jsonUtils.cpp jsonUtils.h
@@ -14,12 +14,18 @@ EvolutionRS18.o: EvolutionRS18.cpp EvolutionRS18.h
 	g++ -c -O3 -std=c++11 -flto EvolutionRS18.cpp
 EvolutionCE.o: EvolutionCE.cpp EvolutionCE.h
 	g++ -c -O3 -std=c++11 -flto EvolutionCE.cpp
+Evolution21.o: Evolution21.cpp Evolution21.h
+	g++ -c -O3 -std=c++11 -flto Evolution21.cpp
 Evolution.o: Evolution.cpp Evolution.h
 	g++ -c -O3 -std=c++11 -flto Evolution.cpp
 WormRS18.o: WormRS18.cpp WormRS18.h
 	g++ -c -O3 -std=c++11 -flto WormRS18.cpp
 WormCE.o: WormCE.cpp WormCE.h
 	g++ -c -O3 -std=c++11 -flto WormCE.cpp
+Worm21.o: Worm21.cpp Worm21.h
+	g++ -c -O3 -std=c++11 -flto Worm21.cpp
+Segment21.o: Segment21.cpp Segment21.h
+	g++ -c -O3 -std=c++11 -flto Segment21.cpp	
 WormBody.o: WormBody.cpp WormBody.h
 	g++ -c -O3 -flto WormBody.cpp
 NervousSystem.o: NervousSystem.cpp NervousSystem.h #VectorMatrix.h random.h ../neuromlLocal/NervousSystemBase.h
