modified makefiles for macos

--- a/network2021/Makefile
+++ b/network2021/Makefile
@@ -3,7 +3,7 @@ main: main.o Worm.o WormBody.o Segment.o NervousSystem.o Muscles.o TSearch.o ran
 random.o: random.cpp random.h VectorMatrix.h
 	g++ -c -O3 -flto random.cpp
 argUtils.o: ../argUtils.cpp ../argUtils.h
-	g++ -c -O3 -flto ../argUtils.cpp	
+	g++ -c -O3 -std=c++11 -flto ../argUtils.cpp	
 TSearch.o: TSearch.cpp TSearch.h
 	g++ -c -O3 -flto TSearch.cpp
 Worm.o: Worm.cpp Worm.h
