--- a/RoyalSociety2018/Makefile
+++ b/RoyalSociety2018/Makefile
@@ -7,7 +7,7 @@ jsonUtils.o: jsonUtils.cpp jsonUtils.h
 TSearch.o: TSearch.cpp TSearch.h
 	g++ -c -O3 -flto TSearch.cpp
 argUtils.o: ../argUtils.cpp ../argUtils.h
-	g++ -c -O3 -flto ../argUtils.cpp	
+	g++ -c -O3 -std=c++11 -flto ../argUtils.cpp	
 Worm.o: Worm.cpp Worm.h
 	g++ -c -O3 -flto Worm.cpp
 WormBody.o: WormBody.cpp WormBody.h
