--- a/neuromlLocal/testc302SigSim/Makefile
+++ b/neuromlLocal/testc302SigSim/Makefile
@@ -13,9 +13,13 @@ testc302NervousSystem.o: testc302NervousSystem.cpp ../c302NervousSystem.h
 	$(CC) -c -O3 $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) testc302NervousSystem.cpp
 	@echo ' '
 
-c302NervousSystem.o: ../c302NervousSystem.cpp ../owSignalSimulatorForWorm2D.h ../NervousSystemBase.h
+c302NervousSystem.o: ../c302NervousSystem.cpp #../owSignalSimulatorForWorm2D.h #../NervousSystemBase.h
 	$(CC) -c -O3 $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) ../c302NervousSystem.cpp 
 	@echo ' '
+c302ForW2D.o: ../c302ForW2D.cpp ../owSignalSimulatorForWorm2D.h  #../NervousSystemBase.h
+	$(CC) -c -O3 $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) ../c302ForW2D.cpp 
+	@echo ' '
+
 
 owSignalSimulator.o: ../owSignalSimulator.cpp ../owSignalSimulator.h ../owINeuronSimulator.h
 	$(CC) -c -O3 $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) ../owSignalSimulator.cpp
@@ -24,9 +28,9 @@ owSignalSimulator.o: ../owSignalSimulator.cpp ../owSignalSimulator.h ../owINeuro
 owSignalSimulatorForWorm2D.o: ../owSignalSimulatorForWorm2D.cpp ../owSignalSimulatorForWorm2D.h ../owSignalSimulator.h
 	$(CC) -c -O3 $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) ../owSignalSimulatorForWorm2D.cpp
 	@echo ' '
-testc302NervousSystem: testc302NervousSystem.o c302NervousSystem.o owSignalSimulatorForWorm2D.o owSignalSimulator.o
+testc302NervousSystem: testc302NervousSystem.o c302ForW2D.o c302NervousSystem.o owSignalSimulatorForWorm2D.o owSignalSimulator.o
 	@echo '  Linking... '
-	$(CC) $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) -pthread -o testc302NervousSystem testc302NervousSystem.o c302NervousSystem.o owSignalSimulatorForWorm2D.o owSignalSimulator.o $(LIBS)
+	$(CC) $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) -pthread -o testc302NervousSystem testc302NervousSystem.o c302ForW2D.o c302NervousSystem.o owSignalSimulatorForWorm2D.o owSignalSimulator.o $(LIBS)
 
 all: testc302NervousSystem testc302NervousSystem.o
 
