--- a/Worm2D/Makefile
+++ b/Worm2D/Makefile
@@ -6,8 +6,8 @@ LDFLAGS := $(shell $(PYTHON_CONFIG) --embed --ldflags)
 CXXFLAGS := $(shell $(PYTHON_CONFIG) --includes)
 
 EXTRA_FLAGS :=   -fPIE -O3  -Iinc
-main: main.o c302ForW2D.o owSignalSimulator.o owSignalSimulatorForWorm2D.o Worm2DCE.o WormRS18.o Worm21.o WormCE.o Segment21.o Worm2D.o WormBody.o Evolution21.o Evolution.o EvolutionCE.o EvolutionRS18.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o TSearch.o random.o jsonUtils.o
-	$(CC) $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) -pthread -o main main.o Worm2DCE.o c302ForW2D.o owSignalSimulator.o owSignalSimulatorForWorm2D.o WormRS18.o Worm21.o WormCE.o Segment21.o Evolution21.o Evolution.o EvolutionCE.o EvolutionRS18.o Worm2D.o WormBody.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o jsonUtils.o TSearch.o random.o $(LIBS)
+main: main.o c302ForW2D.o owSignalSimulator.o Simulation.o owSignalSimulatorForWorm2D.o Worm2DCE.o WormRS18.o Worm21.o WormCE.o Segment21.o Worm2D.o WormBody.o Evolution21.o Evolution.o EvolutionCE.o EvolutionRS18.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o TSearch.o random.o jsonUtils.o
+	$(CC) $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) -pthread -o main main.o Simulation.o Worm2DCE.o c302ForW2D.o owSignalSimulator.o owSignalSimulatorForWorm2D.o WormRS18.o Worm21.o WormCE.o Segment21.o Evolution21.o Evolution.o EvolutionCE.o EvolutionRS18.o Worm2D.o WormBody.o NervousSystem.o StretchReceptor18.o StretchReceptorCE.o Muscles.o jsonUtils.o TSearch.o random.o $(LIBS)
 c302ForW2D.o: ../neuromlLocal/c302ForW2D.cpp ../neuromlLocal/owSignalSimulatorForWorm2D.h  #../NervousSystemBase.h
 	$(CC) -c -O3 $(CXXFLAGS) $(LDFLAGS) $(EXTRA_FLAGS) ../neuromlLocal/c302ForW2D.cpp 
 	@echo ' '
@@ -27,6 +27,8 @@ Worm2D.o: Worm2D.cpp Worm2D.h jsonUtils.h
 	$(CC) -c -O3 -std=c++11 -I/opt/homebrew/Cellar/nlohmann-json/3.11.3/include -flto Worm2D.cpp
 EvolutionRS18.o: EvolutionRS18.cpp EvolutionRS18.h 
 	$(CC) -c -O3 -std=c++11 -I/opt/homebrew/Cellar/nlohmann-json/3.11.3/include -flto EvolutionRS18.cpp
+Simulation.o: Simulation.cpp Simulation.h 
+	$(CC) -c -O3 -flto Simulation.cpp
 EvolutionCE.o: EvolutionCE.cpp EvolutionCE.h 
 	$(CC) -c -O3 -std=c++11 -I/opt/homebrew/Cellar/nlohmann-json/3.11.3/include -flto EvolutionCE.cpp
 Evolution21.o: Evolution21.cpp Evolution21.h 
